--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = ts_doors
 depends = default, ts_workshop, doors
-optional_depends = moretrees, moreores, technic, ethereal
+optional_depends = moretrees, moreores, technic, ethereal, basic_materials, techage, hyperloop, cherrytree, lemontree, clementinetree, ebony, mahogany
 description = Adds doors for all kinds of wood.
